<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DemoServiceMusic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="str_welcome">Welcome to here!欢迎大家学习安卓开发！</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_music">MusicActivity</string>
    
    <string name="str_main_user">用户名：</string>
    
    <string name="str_button_music">听歌</string>
    <string name="str_button_news">新闻资讯</string>
    <string name="str_button_personal">我</string>
    
    <string name="str_default_titlename">欢迎进入音乐播放界面</string>
    
    <string name="str_login_welcome">欢迎进入登录界面</string>
	<string name="str_login">登录</string>
	<string name="str_reset">重置</string>
</resources>