<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

<!--
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_height="wrap_content" >        </RelativeLayout> -->

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/llShowMsg"
            android:paddingBottom="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvShowuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:text="@string/str_main_user" />

            <TextView
                android:id="@+id/tvUserim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:text="游客" />

        </LinearLayout>
        
        <View 
            android:layout_height="1dp" 
            android:background="#000000"
            android:layout_alignBottom="@+id/llShowMsg"
            android:layout_width="fill_parent">
            
        </View>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >



        <Button
            android:id="@+id/btnMusic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/str_button_music" />

        <Button
            android:id="@+id/btnNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dip"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/str_button_news" />

        <Button
            android:id="@+id/btnPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dip"
            android:layout_weight="1"
            android:background="@drawable/bg_btn"
            android:text="@string/str_button_personal" />
    </LinearLayout>
        <!--
		android:padding="0dp"
        android:gravity="center"
        android:layout_margin="0dp"
 style="?android:attr/buttonBarButtonStyle" 
 android:background="@style/bottom_Button"

        -->
</RelativeLayout>