<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/tvShowImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="30dp"
        android:text="@string/str_login_welcome" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:layout_below="@+id/tvShowImg" >
        
        <EditText
	        android:id="@+id/editText1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_above="@+id/text_password"
	        android:layout_alignParentTop="true"
	        android:layout_toRightOf="@+id/text_name"
	        android:ems="10" >

        	<requestFocus />
    	</EditText>

	    <EditText
	        android:id="@+id/editText2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/text_password"
	        android:layout_alignLeft="@+id/editText1"
	        
	        android:ems="10"
	        android:inputType="textPassword" />
	
	    <TextView
	        android:id="@+id/text_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/text_name"
	        android:layout_marginTop="43dp"
	        android:layout_toLeftOf="@+id/editText2"
	        android:text="密码：" />
	
	    <TextView
	        android:id="@+id/text_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="17dp"
	        android:layout_marginTop="32dp"
	        android:text="帐号：" />

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:gravity="center"
	        android:layout_marginTop="10dp"
	        android:layout_below="@+id/text_password"
	        android:layout_height="wrap_content" >
        		<Button
			        android:id="@+id/btnLogin"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"			        
			        android:text="@string/str_login" />
        		<Button
			        android:id="@+id/btnReset"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="20dp"
			        android:text="@string/str_reset" />
	    </LinearLayout>
    </RelativeLayout>

</RelativeLayout>